pts-core: Add result viewer option "hide noisy results"
pts-core: Add result viewer option "hide results with little change/spread"
pts-core: Add result viewer option "only show results where X faster than Y"
pts-core: Add XML export to result viewer export menu
pts-core: Support deleting runs from the result viewer
phodevi: BSD tweaks/fixes

Phoronix Test Suite 9.4.1
4 March 2020

Various minor bug fixes and OpenBenchmarking.org cache update

Phoronix Test Suite 9.4.0-Vestby
25 February 2020

pts-core: Add option in the result viewer to allow compacting multi-option test results into single graphs
pts-core: Add option in the result viewer to allow compacting multi-version test results into single graphs
pts-core: Add Parent tag to result file schema for specifying relation to other result objects
pts-core: Report test profile support errors when intended
pts-core: Fix showing NVIDIA test options on non-Linux NVIDIA platforms
pts-core: Don't show delete/annotation options for dynamically generated result objects where those options are not relevant
pts-core: Allow showing performance-per-suite option within result viewer
pts_Graph: When going to PDF with GD library, just use the OB rather than temporary file
pts_Graph: Restore support for error bars on vertical bar graph rendering
pts_Graph: Support for simpler view / rendering without header/footer

Phoronix Test Suite 9.4.0 Milestone 3
18 February 2020

pts-core: Add PDF bookmarks to result graphs on PDF result file generation
pts-core: Add automated executive summary of result files via executive-summary sub-command and PDF result export
pts-core: Add remove-result-from-result-file sub-command (slightly different from remove-results-from-result-file)
pts-core: Set SaveTestLogs = TRUE by default
pts-core: Set SaveInstallationLogs = TRUE by default
pts-core: Refactor test-logs (SaveTestLogs) handling
pts-core: Refactor test installation logs handling